--- a/index.html
+++ b/index.html
@@ -97,9 +97,9 @@
         <p class="more-items">More &raquo;</p>
     </article>
     <article>
-        <header>5</header>
+        <header>5 Lehetetlen ez a jQuery</header>
         <ul>
-            <li></li>
+            <li>megpróbáltam már mindent és még mindig nem működik úgyhogy feladtam és itt a végleges termék</li>
             <li></li>
             <li class="more"></li>
             <li class="more"></li>
