--- a/index.html
+++ b/index.html
@@ -12,88 +12,52 @@
 <section>
 
     <article>
-        <header>1 - I carry your heart with me</header>
+        <header><img src="htmlicon.png" alt="HTML" title="HTML"></header>
         <ul>
-            <li>i carry your heart with me(i carry it in
-                my heart)</li>
-            <li>i am never without it(anywhere
-                i go you go,my dear;and whatever is done
-                by only me is your doing,my darling)</li>
-            <li> i fear
-                no fate(for you are my fate,my sweet)</li>
-            <li>i want
-                no world(for beautiful you are my world,my true)</li>
-            <li class="more"> and it’s you are whatever a moon has always meant
-                and whatever a sun will always sing is you</li>
-            <li class="more"><a href="https://www.poetryfoundation.org/poetrymagazine/poems/49493/i-carry-your-heart-with-mei-carry-it-in">src</a></li>
+            <li><a href="https://www.w3schools.com/" target="_blank">W3SCHOOLS</a></li>
+            <li><a href="https://freefrontend.com/html-code-examples/" target="_blank">FREEFRONTEND</a></li>
         </ul>
         <p class="more-items">More &raquo;</p>
     </article>
     <article>
-        <header>2 - Auguries of Innocence </header>
+        <header><img src="pythonicon.png" alt="PYTHON" title="PYTHON"></header>
         <ul>
-            <li>To see a World in a Grain of Sand
-                And a Heaven in a Wild Flower </li>
-            <li>Hold Infinity in the palm of your hand 
-                And Eternity in an hour</li>
-            <li>A Robin Red breast in a Cage
-                Puts all Heaven in a Rage </li>
-            <li>A Dove house filld with Doves & Pigeons
-                Shudders Hell thr' all its regions </li>
-            <li class="more">A dog starvd at his Masters Gate
-                Predicts the ruin of the State </li>
-            <li class="more">A Horse misusd upon the Road
-                Calls to Heaven for Human blood </li>
-            <li class="more">Each outcry of the hunted Hare
-                A fibre from the Brain does tear </li>
-            <li class="more">A Skylark wounded in the wing 
-                A Cherubim does cease to sing</li>
-            <li class="more"><a href="https://www.poetryfoundation.org/poems/43650/auguries-of-innocence">src</a></li>
+            <li><a href="https://www.python.org/" target="_blank">PYTHON.ORG</a></li>
+            <li><a href="https://realpython.com/" target="_blank">REALPYTHON</a></li>
+            <li><a href="https://pypi.org/" target="_blank">PYPI</a></li>
         </ul>
         <p class="more-items">More &raquo;</p>
     </article>
     <article>
-        <header>3 - Ne Hidd!</header>
+        <header><img src="javaicon.png" alt="JAVA" title="JAVA"></header>
         <ul>
-            <li>Ne hidd, ne hidd, ami igaz,
-                Ami kegyetlen, ami gaz,
-                Mi ocsmány és alávaló
-                Ne hidd, ne hidd, ami való. </li>
-            <li>Hazugság, amit a lap ír,
-                Félrebeszél az a papír,
-                Meredt szemekkel aki sug
-                Az mind gyalázatos hazug. </li>
-                <li>Ugratnak, játszanak veled;
-                    Nem lehet az, hogy képzeled!
-                    Nem hiheted, ha van hited,
-                    Gazember vagy, ha elhiszed. </li>
-            <li class="more">Ne hidd el, ne hidd el, mi gaz,
-                Ordítsd az égre: nem igaz!
-                Szeme közé kacagj neki,
-                Ki a borzasztót hirdeti. </li>
-                <li class="more">Hátrálj, zárkózz el, menekülj,
-                    Vigyázz, ne süllyedj, el ne züllj,
-                    Vigyázz, a szenny meg ne egyen,
-                    Ne rothadj itt elevenen. </li>
-            <li class="more">Hallod, ne hidd, mi rút, mi vad,
-                Mi undort és gyötrelmet ad,
-                A fényképed, meg a tavasz,
-                S az Igazság, az az igaz. </li>
-                <li class="more"><a href="https://www.szepi.hu/irodalom/vers/tvers/tv_231.html">src</a></li>
-        </ul>
+            <li><a href="https://www.oracle.com/java/" target="_blank">ORACLE</a></li>
+            <li><a href="https://docs.oracle.com/javase/tutorial/" target="_blank">JAVA</a></li>
+</ul>
         <p class="more-items">More &raquo;</p>
     </article>
     <article>
-        <header>4 Do not go gentle into that good night</header>
+        <header><img src="jsicon.png" alt="JS" title="JS"></header>
         <ul>
-            <li>Do not go gentle into that good night, Old age should burn and rave at close of day; Rage, rage against the díing of the light</li>
-            <li>Though wide men at theirend know dark is right, Because their words had forked no lighting they Do not go gentle into that good night.</li>
-            <li>Good men, the last wave by, crying how bright their frail deeds might have danced in a green bay, Rage, rage against the dying of the light</li>
-            <li class="more">Wild men who caught and sang the sun in flight, And learn, too late, they drieved it on its way, Do not go gentle into that good night.</li>
-            <li class="more">Grave men, near death, who see with blinding sight Blind eyes could blaze like meteors and be gay, Rage, rage against the dying of the light</li>
-            <li class="more">And you, my father, tere on the sad height, Curse, bless, me now with your fierce tears, I pray. Do not go gentle into that good night. Rage, rage against the dying of the light</li>
-            <li class="more"><a href="https://poets.org/poem/do-not-go-gentle-good-night">src</a></li>
-        </ul>
+<li><a href="https://www.javascript.com/" target="_blank">JAVASCRIPT</a></li>
+<li><a href="https://developer.mozilla.org/hu/docs/Web/JavaScript" target="_blank">JS MDN</a></li>
+</ul>
+        <p class="more-items">More &raquo;</p>
+    </article>
+    <article>
+        <header><img src="halozaticon.jpg" alt="NETWORK" title="NETWORK"></header>
+        <ul>
+<li><a href="https://www.netacad.com/" target="_blank">CISCO</a></li>
+<li><a href="https://www.calculator.net/ip-subnet-calculator.html" target="_blank">CALCULATOR</a></li>
+</ul>
+        <p class="more-items">More &raquo;</p>
+    </article>
+    <article>
+        <header><img src="dbicon.jpg" alt="DATABASE" title="DATABASE"></header>
+        <ul>
+<li><a href="https://www.w3schools.com/sql/" target="_blank">SQL</a></li>
+<li><a href="https://www.apachefriends.org/hu/index.html" target="_blank">XAMPP</a></li>
+</ul>
         <p class="more-items">More &raquo;</p>
     </article>
 </section>
